--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CityActivity"></activity>
+        <activity android:name=".BarracksActivity"></activity>
+        <activity android:name=".list.CityListAdapter" />
+        <activity android:name=".list.CityListActivity" />
+        <activity android:name=".CityActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
