--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BarracksActivity"></activity>
+        <activity android:name=".AttackActivity"></activity>
+        <activity android:name=".UnitPiechartActivity" />
+        <activity android:name=".BarracksActivity" />
         <activity android:name=".list.CityListAdapter" />
         <activity android:name=".list.CityListActivity" />
         <activity android:name=".CityActivity" />
